--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile(name: 'xutils', ext: 'aar')
     compile files('libs/SlidingMenu.jar')
+    compile files('libs/fastjson-1.2.17.jar')
 }
