分类界面ListView和ViewPager的联动

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity android:name=".activity.GuideActivity" />
         <activity android:name=".activity.FoundActivity" />
         <activity android:name=".activity.ClassRoomActivity" />
-        <activity android:name=".activity.PlusActivity"></activity>
+        <activity android:name=".activity.PlusActivity" />
+        <activity android:name=".activity.SearchActivity"></activity>
     </application>
 
 </manifest>
