--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile files('libs/SlidingMenu.jar')
     compile files('libs/fastjson-1.2.17.jar')
     compile files('libs/picasso-2.5.2.jar')
+    compile project(':pulltorefresh')
 }
