--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity android:name=".activity.ClassRoomActivity" />
         <activity android:name=".activity.PlusActivity" />
         <activity android:name=".activity.SearchActivity" />
-        <activity android:name=".activity.LoginActivity"></activity>
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.GoodsActivity"></activity>
     </application>
 
 </manifest>
