--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile files('libs/fastjson-1.2.17.jar')
     compile files('libs/picasso-2.5.2.jar')
     compile project(':pulltorefresh')
+    compile 'com.android.support:design:24.2.1'
 }
