--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.example.sanfuproject">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -24,9 +23,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.GuideActivity" />
+        <activity android:name=".activity.FoundActivity" />
+        <activity android:name=".activity.ClassRoomActivity" />
         <activity android:name=".activity.PlusActivity" />
         <activity android:name=".activity.SearchActivity" />
-        <activity android:name=".activity.LoginActivity"></activity>
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.GoodsActivity"></activity>
     </application>
 
 </manifest>
